; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/bluetooth/bthidd/extr_btuinput.c_uinput_write_event.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/bluetooth/bthidd/extr_btuinput.c_uinput_write_event.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.input_event = type { i64, i8*, i8* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64, i8*, i8*, i64)* @uinput_write_event to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @uinput_write_event(i64 %0, i8* %1, i8* %2, i64 %3) #0 {
  %5 = alloca i64, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca %struct.input_event, align 8
  store i64 %0, i64* %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  store i64 %3, i64* %8, align 8
  %10 = load i64, i64* %5, align 8
  %11 = icmp sge i64 %10, 0
  %12 = zext i1 %11 to i32
  %13 = call i32 @assert(i32 %12)
  %14 = call i32 @memset(%struct.input_event* %9, i32 0, i32 24)
  %15 = load i8*, i8** %6, align 8
  %16 = getelementptr inbounds %struct.input_event, %struct.input_event* %9, i32 0, i32 2
  store i8* %15, i8** %16, align 8
  %17 = load i8*, i8** %7, align 8
  %18 = getelementptr inbounds %struct.input_event, %struct.input_event* %9, i32 0, i32 1
  store i8* %17, i8** %18, align 8
  %19 = load i64, i64* %8, align 8
  %20 = getelementptr inbounds %struct.input_event, %struct.input_event* %9, i32 0, i32 0
  store i64 %19, i64* %20, align 8
  %21 = load i64, i64* %5, align 8
  %22 = call i64 @write(i64 %21, %struct.input_event* %9, i32 24)
  ret i64 %22
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @memset(%struct.input_event*, i32, i32) #1

declare dso_local i64 @write(i64, %struct.input_event*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
